libs/slim/test/typecheck/fail/return_type_mismatch.shader
shader vertex {
    return 0;
}
